objects/Alpha_Prefix_Network__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID_Indicator__c</fullName>
        <label>Account ID Indicator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(Alpha_Prefix_Request__r.Account__r.Id , Alpha_Prefix_Request__r.Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_Prefix_Request__c</fullName>
        <label>Alphanumeric Prefix Request</label>
        <referenceTo>Alpha_Prefix_Request__c</referenceTo>
        <relationshipName>Alpha_Prefix_Networks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assigned_Prefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Prefix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Control Plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomNetworkName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Only if &quot;Other&quot; Product/Network is selected.</inlineHelpText>
        <label>Custom Network Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Prefix__c</fullName>
        <formula>IF(ISPICKVAL( ProductNetworkName__c , &quot;Custom Network (Please Specify)&quot;) , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryMethod__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProductNetworkName__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 = Traditional</fullName>
                </value>
                <value>
                    <fullName>2 = BlueCard PPO</fullName>
                </value>
                <value>
                    <fullName>6 = Medigap</fullName>
                </value>
                <value>
                    <fullName>7 = Med Adv without Reciprocity</fullName>
                </value>
                <value>
                    <fullName>8 = Medicaid</fullName>
                </value>
                <value>
                    <fullName>A = Med Adv PPO with Reciprocity</fullName>
                </value>
                <value>
                    <fullName>B = Med Adv Regional PPO with Reciprocity</fullName>
                </value>
                <value>
                    <fullName>C = Med Adv HMO</fullName>
                </value>
                <value>
                    <fullName>D = Med Adv Private Fee for Service (PFFS)</fullName>
                </value>
                <value>
                    <fullName>E = Med Adv Special Needs Plan (SNP)</fullName>
                </value>
                <value>
                    <fullName>F = Med Adv Cost Product</fullName>
                </value>
                <value>
                    <fullName>G = Custom Network</fullName>
                </value>
                <value>
                    <fullName>G - PPO</fullName>
                </value>
                <value>
                    <fullName>H - TRAD</fullName>
                </value>
                <value>
                    <fullName>J = AdvNet Networks</fullName>
                </value>
                <value>
                    <fullName>K = Exchange Qualified PPO</fullName>
                </value>
                <value>
                    <fullName>L = Exchange Qualified PPO Custom</fullName>
                </value>
                <value>
                    <fullName>J = AltNet Networks</fullName>
                    <isActive>false</isActive>
                    <label>J = AltNet Networks</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <formula>Alpha_Prefix_Request__r.CIP_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incomplete__c</fullName>
        <formula>OR(
ISBLANK( Assigned_Prefix__c ),
ISBLANK( Control_Plan__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incomplete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefix_Account_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefix Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNetworkName__c</fullName>
        <label>Product/Network Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AZ: Blue Alternative</fullName>
                </value>
                <value>
                    <fullName>CA: Select PPO</fullName>
                </value>
                <value>
                    <fullName>CareFirst: BlueChoice</fullName>
                </value>
                <value>
                    <fullName>CO: Pathways CO</fullName>
                </value>
                <value>
                    <fullName>CO  3GB- WellChoice - C</fullName>
                </value>
                <value>
                    <fullName>CO  3GC- WellChoice - H</fullName>
                </value>
                <value>
                    <fullName>CO  3GD- WellChoice - U</fullName>
                </value>
                <value>
                    <fullName>CT- Century Preferred Tiered</fullName>
                </value>
                <value>
                    <fullName>Custom Network (Please Specify)</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>FL: NetworkBlue</fullName>
                </value>
                <value>
                    <fullName>GA: Blue Open Access POS</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>IL - BlueChoice Options PPO</fullName>
                </value>
                <value>
                    <fullName>IN- Anthem HealthSync</fullName>
                </value>
                <value>
                    <fullName>Medicaid Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medigap</fullName>
                </value>
                <value>
                    <fullName>MN- High Value Network</fullName>
                </value>
                <value>
                    <fullName>MO: Anthem Alliance EPO</fullName>
                </value>
                <value>
                    <fullName>MO: Blue Preferred-POS</fullName>
                </value>
                <value>
                    <fullName>MO- Anthem Alliance EPO</fullName>
                </value>
                <value>
                    <fullName>MO-KC: Preferred-Care</fullName>
                </value>
                <value>
                    <fullName>MO-St.Louis: Blue Access Choice</fullName>
                </value>
                <value>
                    <fullName>NC: BlueValue</fullName>
                </value>
                <value>
                    <fullName>NH: BlueChoice Open Access POS</fullName>
                </value>
                <value>
                    <fullName>NJ: Managed Care Network</fullName>
                </value>
                <value>
                    <fullName>NY  Blue Access</fullName>
                </value>
                <value>
                    <fullName>NY: Blue Priority</fullName>
                </value>
                <value>
                    <fullName>NY: Empire POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Alphanumeric Prefix Network</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductNetworkName__c</columns>
        <columns>CustomNetworkName__c</columns>
        <columns>DeliveryMethod__c</columns>
        <columns>Assigned_Prefix__c</columns>
        <columns>Control_Plan__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Alphanumeric Prefix Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alphanumeric Prefix Networks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prefix_Account_ID_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
 (OR
  (NOT(REGEX(Prefix_Account_ID__c, &quot;^(ANTM)[A-Z0-9_]*$&quot;)),
  LEN(Prefix_Account_ID__c) &lt; 10,
  LEN(Prefix_Account_ID__c) &gt; 20
  ),
 NOT(ISBLANK(Prefix_Account_ID__c)) 
)</errorConditionFormula>
        <errorDisplayField>Prefix_Account_ID__c</errorDisplayField>
        <errorMessage>Please check your entry. There may be no spaces, no lower case letters or special characters. ID must begin with ANTM and be 10-20 characters in length</errorMessage>
    </validationRules>
</CustomObject>